# places

./: .env  .gitignore  README.md  docker-compose.yml
.github/workflows/: check.yml  deploy.yml
client/: index.html  package.json  svelte.config.js  tailwind.config.js  tsconfig.json
client/components/: Header.tsx  IconButton.tsx  Menu.tsx  MenuButton.tsx
client/hooks/: useGet.ts
client/src/: App.css  (+6 more)
places_client/: Dockerfile  README.md  package.json  svelte.config.js
places_server/: .gitignore  Dockerfile  Makefile  alembic.ini  pyproject.toml
places_server/migrations/: env.py
places_server/migrations/versions/: c1ce7b390db8_.py
places_server/places_server/: configs.py  main.py
places_server/places_server/app/api/: api.py
places_server/places_server/app/api/v1/: dependencies.py  v1.py
places_server/places_server/app/api/v1/endpoints/: placelists.py  places.py  users.py
places_server/places_server/app/models/: place.py  placelist.py  user.py
places_server/places_server/app/services/: placelists_service.py  places_service.py  users_service.py
places_server/places_server/app/utils/: cryptography.py
places_server/places_server/configs/: base.py  local.py
places_server/places_server/database/: database.py  entities.py
places_server/places_server/database/repositories/: placelists_repository.py  places_repository.py  users_repository.py
places_server/places_server/test/: conftest.py  fake_classes.py  test_placelists_repository.py  test_placelists_service.py  test_places_repository.py  test_places_service.py  test_users_repository.py  test_users_service.py
server/: Makefile  configs.py  main.py  setup.cfg
test_server/: data.py  main.py  requirements.txt
(+157 files in other folders)
